[tool.poetry]
name = "say"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = {version = "^1.26.1", python="^3.10,<3.13"}
python = "^3.10"
pyaudio = "^0.2.13"
torchaudio = "^2.1.0"
spacy = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
